Adding factories, trying to reduce warnings

--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
   "dependencies": {
     "js-yaml": "^3.0.2",
     "minimist": "0.0.7",
-    "react-tools": "~0.11.2"
+    "object-assign": "^2.0.0",
+    "react-tools": "~0.12.x"
   },
   "devDependencies": {
     "jshint": "~2.4.3",
     "mocha": "~1.17.1",
-    "react": "^0.11.2"
+    "react": "^0.12.x"
   }
 }
